@@ -1,3 +1,8 @@
+2009-07-07 nicolas
+* add dms_cache_factory to store conversion values in persisent storage like flare
+To enable it, please update your DMS Preference.
+(Preferred Conversion Cache)
+
 2009-07-03 romain
 * Revert latest proxy field library simplification, as the design was not finalized.
 
